2010-11-01  Glenn Morris  <rgm@gnu.org>

	* semantic/symref/cscope.el (ede-toplevel):
	* semantic/symref.el (ede-toplevel):
	* semantic/tag-file.el (ede-toplevel):
	* ede.el (ede-toplevel): Fix declarations.

2010-10-31  Glenn Morris  <rgm@gnu.org>

	* ede/proj-elisp.el (project-compile-target): Fix previous change.
	* semantic/ede-grammar.el (project-compile-target): Fix previous change.

2010-10-31  Julien Danjou  <julien@danjou.info>

	* ede/proj-elisp.el (project-compile-target):
	* semantic/ede-grammar.el (project-compile-target):
	Use `byte-recompile-file'.

2010-10-31  Glenn Morris  <rgm@gnu.org>

	* mode-local.el (mode-local-augment-function-help):
	* semantic/analyze/debug.el (semantic-analyzer-debug-add-buttons):
	* semantic/symref/list.el (semantic-symref-results-dump)
	(semantic-symref-rb-toggle-expand-tag): Replace inappropriate uses
	of toggle-read-only.

2010-09-30  Chong Yidong  <cyd@stupidchicken.com>

	* semantic/bovine/el.el:
	* semantic/mru-bookmark.el (global-semantic-mru-bookmark-mode):
	Fix require statements.

2010-09-29  Chong Yidong  <cyd@stupidchicken.com>

	* semantic/tag.el (semantic-tag-version): Bump to 2.0.

	* semantic/db-typecache.el (semanticdb-typecache-find-default):
	* semantic/imenu.el (semantic-create-imenu-index):
	* semantic/grammar.el (semantic--grammar-macro-function-tag):
	* semantic/fw.el (semanticdb-without-unloaded-file-searches): Fix
	require.  Suggested by David Engster.

	* semantic/bovine/c-by.el: Regenerate.

2010-09-29  Eric Ludlam  <zappo@gnu.org>

	* semantic/lex-spp.el (semantic-lex-spp-debug-symbol): New var.
	(semantic-lex-spp-enable-debug-symbol): New command
	(semantic-lex-spp-value-valid-p)
	(semantic-lex-spp-validate-value): New functions
	(semantic-lex-spp-symbol-set)
	(semantic-lex-spp-symbol-push): Add call to validate value.
	(semantic-lex-spp-table-write-slot-value): Instead of erroring on
	invalid values during save, just save a nil.

2010-09-25  Chong Yidong  <cyd@stupidchicken.com>
